k8s/product/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: mini

spec:
  selector:
    app: product-service

  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP

  type: ClusterIP
