k8s/product/product-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-network-policy
  namespace: mini
spec:
  podSelector:
    matchLabels:
      app: product-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: cart-service
      ports:
        - protocol: TCP
          port: 5001
